@@ -168,7 +168,6 @@ class PendingAddOp implements WriteCallback {
 
     void submitCallback(final int rc) {
         cb.addComplete(rc, lh, entryId, ctx);
-        lh.opCounterSem.release();
     }
 
     @Override
